feat: jwt authentication added
