# middlewares/validation_token.js
@@ -1,14 +1,20 @@
 const jwt = require('jsonwebtoken')
 const AppError = require('../utils/AppError')
 
-module.exports = function validation_token(req, res, next) {
-    // pega o cabecalho da autorizacao (nesse caso e 'token')
-    const authHeader = req.headers['token']
+function validation_token(req, res, next) {
+    // pega o cabecalho da autorizacao (nesse caso e 'authorization')
+    const authHeader = req.headers['authorization']
     // se nao for undefined ou null ele ignora o index 0 (Bearer) e pega so oque esta no index 1, o token
     const token = authHeader && authHeader.split(' ')[1]
 
+    console.log('token:', token)
+    console.log('secret: ', process.env.TOKEN_SECRET)
+    console.log('Headers recebidos:', req.headers)
+    console.log('Auth header:', req.headers['authorization'])
+
+
     // se for undefined ou null retorna erro 
-    if (!token) return next(new AppError('Invalid or Expired Token', 401))
+    if (token == null) return next(new AppError('Invalid or Expired Token', 401))
 
     // verifica se o token e valido e nao expirou usando a chave secrete no .env
     jwt.verify(token, process.env.TOKEN_SECRET, (err, decoded) => {
@@ -19,3 +25,5 @@ module.exports = function validation_token(req, res, next) {
         next()
     })
 }
+
+module.exports = validation_token
